# ai_hubs

./: .env.example  .gitignore  COMMIT_MSG.txt  Dockerfile  README.md  _clean_dryrun.sh  _deploy_be.sh  _diag.ps1  _diag2.ps1  _inspect_server.sh  _old_ws.py  _sse_test.ps1  alembic.ini  config.yaml  docker-compose.yml  fix_admin.py  main.py  package.json  requirements.txt  test_del.py  项目需求与规划_1_基础.md  项目需求与规划_2_UI细致化.md
backend/: config.yaml  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py  security.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  admin.py  agents.py  auth.py  chat.py  dashboard.py  ide.py  (+9 more)
backend/app/core/: __init__.py  blackboard.py  collab.py  contracts.py  deliverable.py  embeddings.py  guardrails.py  internal_tools.py  llm.py  local_proxy.py  memory.py  metrics_collector.py  orchestrator.py  rag.py  sandbox.py  scorer.py  skill_runtime.py  tokenize.py  tools.py  workflow_runner.py
backend/app/middleware/: __init__.py
backend/app/models/: __init__.py  agent.py  attachment.py  base.py  conversation.py  dataset.py  knowledge.py  memory.py  rag_chunk.py  skill.py  system.py  task.py  user.py
backend/app/schemas/: __init__.py  admin.py  agent.py  auth.py  chat.py  dataset.py  knowledge.py  memory.py  skill.py  task.py
backend/app/services/: __init__.py  auth_service.py  builtin_skills.py  skill_service.py
backend/logs/: e2e.err  e2e.out  m2.err  m2.out  token.txt
backend/scripts/: clean_tool_leakage.py
backend/tests/: test_rag_skills.py  test_task_flow_fixes.py
(+131 files in other folders)
