[project]
name = "ai-hubs"
version = "4.0.0"
description = "AI Hubs — 新一代智能 Agent 平台"
requires-python = ">=3.11"
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # 数据库
    "sqlalchemy[asyncio]>=2.0.30",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    # 认证
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # AI 框架
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    # 向量库
    "chromadb>=0.5.0",
    # 工具
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    # 监控
    "prometheus-client>=0.20.0",
    # 终端 UI (CLI)
    "rich>=13.7.0",
    "typer>=0.12.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
